# uchile_soft_hand

./: README.md
arduino/tactil_driver/: tactil_driver.ino
interface/: hand_controller.py  hand_controller.yaml
pcb/: 2s AmplifierStage.brd  2s AmplifierStage.sch  DXProMiniBoard.brd  DXProMiniBoard.sch
ros/: hand_interface.py
ros/bender_hand/: CMakeLists.txt  package.xml  setup.py
ros/bender_hand/config/: r_gripper_action.yaml
ros/bender_hand/install/: bender_hand.rules  install.sh
ros/bender_hand/launch/: hand.launch  r_gripper.launch
ros/bender_hand/scripts/: use_example.py
ros/bender_hand/scripts/hwcheck/: hw_check.py
ros/bender_hand/shell/: setup.sh
ros/bender_hand/src/bender_hand/: gripper_controller.py  hand_controller.py  hand_interface.py
